--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -1,7 +1,7 @@
 name: automerge
 on:
   schedule:
-    - cron: 10 * * * *
+    - cron: "*/10 * * * *"
 jobs:
   automerge:
     runs-on: ubuntu-latest
