--- a/.github/workflows/merge-schedule.yml
+++ b/.github/workflows/merge-schedule.yml
@@ -8,13 +8,13 @@ on:
       - reopened
   schedule:
     # https://crontab.guru/every-hour
-    - cron: 25 1 * * *
+    - cron: 58 * * * *
 
 jobs:
   merge_schedule:
     runs-on: ubuntu-latest
     steps:
-      - uses: gr2m/merge-schedule-action@v1
+      - uses: gr2m/merge-schedule-action@v1.3.5
         with:
           # Merge method to use. Possible values are merge, squash or
           # rebase. Default is merge.
