--- a/.github/workflows/merge-schedule.yml
+++ b/.github/workflows/merge-schedule.yml
@@ -8,7 +8,7 @@ on:
       - reopened
   schedule:
     # https://crontab.guru/every-hour
-    - cron: /15 * * * *
+    - cron: */15 * * * *
 
 jobs:
   merge_schedule:
